--- a/src/pages/strategies/strategies.scss
+++ b/src/pages/strategies/strategies.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
   padding: 1.6rem;
   overflow-y: auto;
   background-color: var(--general-main-1);
